# runtime

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  Dockerfile  INSTALL.sh  README.md  Taskfile.yml  entrypoint.sh  manage.py  qpt  requirements.txt
QuPot/: __init__.py  asgi.py  conf.py  const.py  routing.py  urls.py  wsgi.py
QuPotUI/: .gitlab-ci.yml  Dockerfile  Dockerfile_buildx  README.md  Taskfile.yml  cp.sh  nginx.conf  package.json  vue.config.js
QuQCS/: README.md  pyproject.toml
QuQCS/qucuQuantum/: __init__.py  backend.py  cuCommand.py  cuQuantum.py  cuQuantumSim.py  exceptions.py  function_time.py  local_cuQuantum_python.py
QuQCS/test/gate/: test_CNOT_gate.py  test_SqrtSwap_gate.py  test_SqrtXdg_gate.py  test_ch_gate.py  test_cp_gate.py  test_cr_gate.py  test_crx_gate.py  test_cry_gate.py  test_crz_gate.py  test_csqrtx_gate.py  test_cswap_gate.py  test_cu1_gate.py  test_cu3_gate.py  test_cu_gate.py  test_cy_gate.py  test_cz_gate.py  test_h_gate.py  test_isWap_gate.py  test_p_gate.py  test_paulix_gate.py  test_pauliy_gate.py  test_pauliz_gate.py  test_r_gate.py  test_rx_gate.py  test_ry_gate.py  test_rz_gate.py  test_s_gate.py  test_sdg_gate.py  test_sqrtX_gate.py  test_swap_gate.py  test_t_gate.py  test_tdg_gate.py  test_u1_gate.py  test_u2_gate.py  test_u3_gate.py  test_x1_gate.py  test_y1_gate.py  test_z1_gate.py
config/: config_example.yml
dockerfile-runtime/: Dockerfile
docs/: CONTRIBUTING.md  FAQ.md  install_note.md
fixtures/: initial_data.json
gitstats/: __main__.py  gitstats.example.json  gitstats.json  main.py
install/: README.md  (+2 more)
(+268 files in other folders)
